data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1279.wast
;; 10. **Branching in Module A Influencing Calls in Imported Module B:**     - Integrate module A where branching decisions and control flow variations (using `br`) impact the calling of multiple functions imported from module B. This setup tests if stack integrity and proper control flow are maintained when cross-module calls are influenced by branching.     - **Constraint Checked:** Proper control flow and stack integrity when branching instructions influence cross-module calls.     - **Relation to Constraint:** Ensures branching and control flow maintain operand stack and consistency during transitions driven by modular function calls.

(assert_invalid
  (module
    (import "moduleB" "func" (func $impB (param i32) (result i32)))
    (func $type-mod-a-influencing-b (result i32)
      (block (result i32)
        (call $impB
          (br 0 (i32.const 42))
        )
      )
    )
  )
  "type mismatch"
)